tests/compError/wrongPropertyType.ucl
// compError
// error: struct property 'a' expected type builtin:Number but got type builtin:String
// tests/compError/wrongPropertyType.ucl:12 -> here
// tests/compError/wrongPropertyType.ucl:7 -> template struct defined here
// tests/compError/wrongPropertyType.ucl:8 -> property originally defined here

const Test = struct {
	property a: Number;
};

var test = struct: Test {
	var a = "test error";
};